--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,4 +1,5 @@
 @import "@fontsource/open-sans";
+@import "@fontsource/source-code-pro";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
